fix: spacing of nav links

--- a/portfolio/src/styles/Nav.css
+++ b/portfolio/src/styles/Nav.css
@@ -1,7 +1,7 @@
 
 nav a {
     display: inline-block;
-    margin: 2px 15px 2px 0px;
+    margin: 2px 30px 2px 0px;
     text-decoration: none;
     color: rgb(14, 68, 27);
     }
